# apiref

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  template-dll.c
src/heap-l2-1-0/: CMakeLists.txt  api-ms-win-core-heap-l2-1-0.def
src/processthreads-l1-1-0/: CMakeLists.txt  api-ms-win-core-processthreads-l1-1-0.def
